CREATE TABLE users (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    email VARCHAR(255) NOT NULL UNIQUE,
    password_hash VARCHAR(255) NOT NULL,
    name VARCHAR(100),
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE drugs (
    id VARCHAR(20) PRIMARY KEY,
    name VARCHAR(200) NOT NULL,
    shape VARCHAR(50),
    color VARCHAR(50),
    mark_front VARCHAR(100),
    mark_back VARCHAR(100),
    ingredient_en VARCHAR(200),
    image_url VARCHAR(500),
    efficacy TEXT,
    usage_info TEXT,
    caution TEXT,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE favorites (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id BIGINT NOT NULL,
    drug_id VARCHAR(20) NOT NULL,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT uq_user_drug UNIQUE (user_id, drug_id),
    CONSTRAINT fk_favorites_user FOREIGN KEY (user_id) REFERENCES users(id) ON DELETE CASCADE,
    CONSTRAINT fk_favorites_drug FOREIGN KEY (drug_id) REFERENCES drugs(id) ON DELETE CASCADE
);

CREATE TABLE dur_pairs (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    drug_id_a VARCHAR(20) NOT NULL,
    drug_id_b VARCHAR(20) NOT NULL,
    reason VARCHAR(300),
    severity VARCHAR(20),
    CONSTRAINT fk_dur_pair_a FOREIGN KEY (drug_id_a) REFERENCES drugs(id),
    CONSTRAINT fk_dur_pair_b FOREIGN KEY (drug_id_b) REFERENCES drugs(id)
);

CREATE TABLE side_effect_cache (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    drug_id VARCHAR(20) NOT NULL,
    source VARCHAR(20) NOT NULL,
    content TEXT,
    fetched_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_side_effect_drug FOREIGN KEY (drug_id) REFERENCES drugs(id)
);

CREATE INDEX idx_drug_source ON side_effect_cache (drug_id, source);
