ALTER TABLE drugs
    ADD COLUMN manufacturer VARCHAR(200),
    ADD COLUMN ingredient_kr VARCHAR(200);

CREATE TABLE search_history (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id BIGINT NOT NULL,
    query_text VARCHAR(300) NOT NULL,
    searched_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_search_history_user
        FOREIGN KEY (user_id) REFERENCES users(id) ON DELETE CASCADE
);

CREATE INDEX idx_search_history_user_searched_at
    ON search_history (user_id, searched_at DESC);

ALTER TABLE dur_pairs
    ADD COLUMN fetched_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP;

-- 기존 행이 있을 수 있으므로 모든 DUR 쌍을 사전순으로 정규화한 뒤 중복을 제거한다.
UPDATE dur_pairs
SET drug_id_a = drug_id_b,
    drug_id_b = drug_id_a
WHERE drug_id_a > drug_id_b;

DELETE FROM dur_pairs older
USING dur_pairs newer
WHERE older.id < newer.id
  AND older.drug_id_a = newer.drug_id_a
  AND older.drug_id_b = newer.drug_id_b;

ALTER TABLE dur_pairs
    ADD CONSTRAINT ck_dur_pair_order CHECK (drug_id_a < drug_id_b);

CREATE UNIQUE INDEX uq_dur_pair_normalized
    ON dur_pairs (drug_id_a, drug_id_b);

CREATE INDEX idx_dur_pair_a_fetched_at
    ON dur_pairs (drug_id_a, fetched_at DESC);

CREATE INDEX idx_dur_pair_b_fetched_at
    ON dur_pairs (drug_id_b, fetched_at DESC);
